syntax = "proto3";
package com.inlineio.schemas;

import "services.proto";
import "google/protobuf/timestamp.proto";

message EventHeader {
  optional google.protobuf.Timestamp sourceTimestamp = 2;
}

message IKVDataEvent {
  EventHeader eventHeader = 1;
  oneof event {
    UpsertDocumentFieldsEvent upsertDocumentFieldsEvent = 2;
    DeleteDocumentFieldsEvent deleteDocumentFieldsEvent = 3;
    DeleteDocumentEvent deleteDocumentEvent = 4;
  }
}


// Upsert fields for specified document.
message UpsertDocumentFieldsEvent {
  MultiFieldDocument multiFieldDocument = 1;
}

// Delete specified fields for specified document.
message DeleteDocumentFieldsEvent {
  MultiFieldDocument documentId = 1;
  repeated string fieldsToDelete = 2;
}

// Delete specified document.
message DeleteDocumentEvent {
  MultiFieldDocument documentId = 1;
}